Observability draft for HTTP clients
This first draft is publishing its own context and KeyValue providers.
This variant is missing the tracing support.